force-app/main/default/objects/CMU_Contact__c/CMU_Contact__c.object-meta.xml
<CustomObject>
    <label>CMU Contact</label>
    <nameField>
        <label>CMU Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMU Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>