force-app/main/default/objects/CMU_Contact__c/fields/Complaint_Probability__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Probability__c</fullName>
    <label>Complaint Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>