force-app/main/default/objects/CMU_Contact__c/fields/Policy_No_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_Numeric__c</fullName>
    <externalId>true</externalId>
    <label>Policy No Numeric</label>
    <length>50</length>
    <type>Text</type>
</CustomField>