force-app/main/default/objects/CMU_Contact__c/fields/Prediction__c.field-meta.xml
<CustomField>
    <fullName>Prediction__c</fullName>
    <label>Prediction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>